pom.jam created and updated to current state